# cookiecutter-pypackage

./: cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  release.yml
